se agrego la captura de campos en remisiones se corrigieron bugs en forms se agregaron validaciones en general

--- a/app/index.html
+++ b/app/index.html
@@ -119,7 +119,7 @@
                         <a href><i class="md md-description"></i>Muestreos de Calidad</a>
                         <ul>
                             <li><a ui-sref="samplingReceptionAdd">Resultado de Proceso</a></li>
-                            <li><a ui-sref="samplingReceptionManage">Gestionar muestreos en Recepciones</a></li>
+                            <li><a ui-sref="samplingReceptionManage">Gestionar Resultado de Proceso</a></li>
                             <li><a ui-sref="samplingGrillManage">Gestionar muestreos en Parrillas</a></li>
                         </ul>
                     </li>
