--- a/app/index.html
+++ b/app/index.html
@@ -189,7 +189,12 @@
     <script src="bower_components/highcharts/highcharts-3d.js"></scriipt>
     <script src="bower_components/highcharts/modules/exporting.js"></script>
 
-    <!--AngularMaterial-->
+    <script src="bower_components/tableExport.jquery.plugin/tableExport.js"></script>
+    <script src="bower_components/tableExport.jquery.plugin/jquery.base64.js"></script>
+    <script src="bower_components/tableExport.jquery.plugin/jspdf/libs/sprintf.js"></script>
+    <script src="bower_components/tableExport.jquery.plugin/jspdf/jspdf.js"></script>
+    <script src="bower_components/tableExport.jquery.plugin/jspdf/libs/base64.js"></script>
+
     <script src="scripts/js/datetimepicker.js"></script>
     <script src="scripts/js/datetimepicker.templates.js"></script>
 
@@ -232,6 +237,7 @@
     <script src="scripts/services/messageService.js"></script>
     <script src="scripts/services/fieldService.js"></script>
     <script src="scripts/services/homeService.js"></script>
+    <script src="scripts/services/excelExport.js"></script>
 
     <script src="scripts/directives/confirmPassword.js"></script>
 </body>
