se agrego jsPDF para generar reportes de parrillas

--- a/app/index.html
+++ b/app/index.html
@@ -195,6 +195,9 @@
     <script src="bower_components/tableExport.jquery.plugin/jspdf/jspdf.js"></script>
     <script src="bower_components/tableExport.jquery.plugin/jspdf/libs/base64.js"></script>
 
+    <script src="bower_components/jspdf/dist/jspdf.min.js"></script>
+    <script src="bower_components/jspdf-autotable/dist/jspdf.plugin.autotable.js"></script>
+
     <script src="scripts/js/datetimepicker.js"></script>
     <script src="scripts/js/datetimepicker.templates.js"></script>
 
