reporte PDF de campos registrados

--- a/app/index.html
+++ b/app/index.html
@@ -189,6 +189,10 @@
     <script src="bower_components/highcharts/highcharts-3d.js"></scriipt>
     <script src="bower_components/highcharts/modules/exporting.js"></script>
 
+    <!--jsPDF-->
+    <script src="bower_components/jspdf/dist/jspdf.min.js"></script>
+    <script src="bower_components/jspdf-autotable/dist/jspdf.plugin.autotable.js"></script>
+
     <!--AngularMaterial-->
     <script src="scripts/js/datetimepicker.js"></script>
     <script src="scripts/js/datetimepicker.templates.js"></script>
