--- a/app/index.html
+++ b/app/index.html
@@ -130,6 +130,7 @@
                             <li><a ui-sref="producerReport">Reporte de Produccion</a></li>
                             <li><a ui-sref="processInventory">Inventario de Proceso</a></li>
                             <li><a ui-sref="currentInventory">Inventario Actual</a></li>
+                            <li><a ui-sref="secondGrillCurrent"> Inventario Actual Segunda Calidad</a></li>
                             <li><a ui-sref="grillIssues">Salidas</a></li>
                             <li><a ui-sref="dailyReport">Reporte Diario</a></li>
                             <li><a ui-sref="reportOrigin">Reporte de Origen</a></li>
