Reportes parrillas de segunda calidad

--- a/app/index.html
+++ b/app/index.html
@@ -130,8 +130,9 @@
                             <li><a ui-sref="producerReport">Reporte de Produccion</a></li>
                             <li><a ui-sref="processInventory">Inventario de Proceso</a></li>
                             <li><a ui-sref="currentInventory">Inventario Actual</a></li>
-                            <li><a ui-sref="secondGrillCurrent"> Inventario Actual Segunda Calidad</a></li>
+                            <li><a ui-sref="secondGrillCurrentInv"> Inventario Actual Segunda Calidad</a></li>
                             <li><a ui-sref="grillIssues">Salidas</a></li>
+                            <li><a ui-sref="secondGrillIssues">Salidas de Segunda</a></li>
                             <li><a ui-sref="dailyReport">Reporte Diario</a></li>
                             <li><a ui-sref="reportOrigin">Reporte de Origen</a></li>
                         </ul>
