--- a/app/index.html
+++ b/app/index.html
@@ -251,8 +251,12 @@
     <script src="scripts/services/homeService.js"></script>
     <script src="scripts/services/excelExport.js"></script>
     <script src="scripts/services/processResultService.js"></script>
+    <script type="text/javascript" src="scripts/js/selectElementContents.js"></script>
 
     <script src="scripts/directives/confirmPassword.js"></script>
+    <script type="text/javascript" src="//cdn.rawgit.com/MrRio/jsPDF/master/dist/jspdf.min.js"></script>
+    <script type="text/javascript" src="//cdn.rawgit.com/niklasvh/html2canvas/0.5.0-alpha2/dist/html2canvas.min.js"></script>
+
 </body>
 
 </html>
