--- a/app/index.html
+++ b/app/index.html
@@ -191,10 +191,6 @@
     <script src="bower_components/highcharts/highcharts-3d.js"></scriipt>
     <script src="bower_components/highcharts/modules/exporting.js"></script>
 
-    <!--jsPDF-->
-    <script src="bower_components/jspdf/dist/jspdf.min.js"></script>
-    <script src="bower_components/jspdf-autotable/dist/jspdf.plugin.autotable.js"></script>
-
     <!--AngularMaterial-->
 
     <script src="bower_components/tableExport.jquery.plugin/tableExport.js"></script>
@@ -202,9 +198,6 @@
     <script src="bower_components/tableExport.jquery.plugin/jspdf/libs/sprintf.js"></script>
     <script src="bower_components/tableExport.jquery.plugin/jspdf/jspdf.js"></script>
     <script src="bower_components/tableExport.jquery.plugin/jspdf/libs/base64.js"></script>
-
-    <script src="bower_components/jspdf/dist/jspdf.min.js"></script>
-    <script src="bower_components/jspdf-autotable/dist/jspdf.plugin.autotable.js"></script>
 
     <script src="scripts/js/datetimepicker.js"></script>
     <script src="scripts/js/datetimepicker.templates.js"></script>
@@ -254,8 +247,11 @@
     <script type="text/javascript" src="scripts/js/selectElementContents.js"></script>
 
     <script src="scripts/directives/confirmPassword.js"></script>
-    <script type="text/javascript" src="//cdn.rawgit.com/MrRio/jsPDF/master/dist/jspdf.min.js"></script>
-    <script type="text/javascript" src="//cdn.rawgit.com/niklasvh/html2canvas/0.5.0-alpha2/dist/html2canvas.min.js"></script>
+    
+    <!--jsPDF-->
+    <script src="bower_components/jspdf/dist/jspdf.min.js"></script>
+    <script src="bower_components/jspdf-autotable/dist/jspdf.plugin.autotable.src.js"></script>
+    <script src="bower_components/jspdf-autotable/dist/jspdf.plugin.autotable.js"></script>
 
 </body>
 
