--- a/app/index.html
+++ b/app/index.html
@@ -236,7 +236,6 @@
     <script src="bower_components/jspdf/dist/jspdf.min.js"></script>
     <script src="bower_components/jspdf-autotable/dist/jspdf.plugin.autotable.src.js"></script>
     <script src="bower_components/jspdf-autotable/dist/jspdf.plugin.autotable.js"></script>
-
     <script type="text/ng-template" id="addVarietyModal.html">
          <div class="modal fade" tabindex="-1" role="dialog" data-backdrop="false" style="background-color: rgba(0, 0, 0, 0.5);">
           <div class="modal-dialog">
@@ -246,7 +245,19 @@
                 <h4 class="modal-title">Agregar Variedades a la Huerta/Campo</h4>
               </div>
               <div class="modal-body">
-                <p>It's your call...</p>
+                <table class="table table-striped table-vmiddle">
+                    <thead>
+                        <tr>
+                            <th>Tipo</th>
+                            <th>Porcentage%</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="variety in varieties">
+                            <td>{{variety.VarietyName}}</td>
+                        </tr>
+                    </tbody>
+                </table>
               </div>
               <div class="modal-footer">
                 <button type="button" ng-click="close(0)" class="btn btn-default" data-dismiss="modal">Cancelar</button>
