Correcciones de ortografia y headers estaticos en reportes

--- a/app/index.html
+++ b/app/index.html
@@ -236,6 +236,11 @@
     <script src="bower_components/jspdf/dist/jspdf.min.js"></script>
     <script src="bower_components/jspdf-autotable/dist/jspdf.plugin.autotable.src.js"></script>
     <script src="bower_components/jspdf-autotable/dist/jspdf.plugin.autotable.js"></script>
+
+    <!--Fixed header-->
+    <script src="bower_components/angu-fixed-header-table/angu-fixed-header-table.js"></script>
+
+    
     <script type="text/ng-template" id="addVarietyModal.html">
          <div class="modal fade" tabindex="-1" role="dialog" data-backdrop="false" style="background-color: rgba(0, 0, 0, 0.5);">
           <div class="modal-dialog">
@@ -249,7 +254,7 @@
                     <thead class="thead-default">
                         <tr>
                             <th>Tipo</th>
-                            <th>Porcentage%</th>
+                            <th>Porcentaje %</th>
                         </tr>
                     </thead>
                     <tbody>
