--- a/app/index.html
+++ b/app/index.html
@@ -135,6 +135,7 @@
                     <li ng-if="currentUser.role === userRoles.admin"><a ui-sref="producersAndVarieties"><i class="md md-people-outline"></i> Productores y Variedades</a></li>
                     <li ng-if="currentUser.role === userRoles.admin"><a ui-sref="cylinder"><i class="md md-view-column"></i> Cilindros</a></li>
                     <li ng-if="currentUser.role === userRoles.admin"><a ui-sref="field"><i class="md md-photo-album"></i> Campos</a></li>
+                    <li ng-if="currentUser.role === userRoles.admin"><a ui-sref="harvestSeason"><i class="md md-my-library-books"></i> Temporadas</a></li>
                 </ul>
             </div>
         </aside>
@@ -210,6 +211,7 @@
     <script src="scripts/controllers/homeController.js"></script>
     <script src="scripts/controllers/fieldController.js"></script>
     <script src="scripts/controllers/processResultController.js"></script>
+    <script src="scripts/controllers/harvestSeasonController.js"></script>
 
     <script src="scripts/services/authService.js"></script>
     <script src="scripts/services/authInterceptorService.js"></script>
@@ -232,6 +234,7 @@
     <script src="scripts/services/homeService.js"></script>
     <script src="scripts/services/excelExport.js"></script>
     <script src="scripts/services/processResultService.js"></script>
+    <script src="scripts/services/harvestSeasonService.js"></script>
     <script type="text/javascript" src="scripts/js/selectElementContents.js"></script>
 
     <script src="scripts/directives/confirmPassword.js"></script>
