--- a/app/index.html
+++ b/app/index.html
@@ -95,10 +95,10 @@
                     <li class="sub-menu" ng-if="(currentUser.role === userRoles.grillUser) || (currentUser.role === userRoles.admin) || (currentUser.role === userRoles.qualityUser)">
                         <a href><i class="md md-view-module"></i>Parillas</a>
                         <ul>
-                            <li ng-if="(currentUser.role === userRoles.remRecepUser) || (currentUser.role === userRoles.admin)"><a ui-sref="grillAdd">Alta de Parillas</a></li>
-                            <li ng-if="(currentUser.role === userRoles.remRecepUser) || (currentUser.role === userRoles.admin) || (currentUser.role === userRoles.qualityUser)"><a ui-sref="grillManage">Inventario de Proceso</a></li>
-                            <li ng-if="(currentUser.role === userRoles.remRecepUser) || (currentUser.role === userRoles.admin)"><a ui-sref="grillCurrentInv">Inventario Actual</a></li>
-                            <li ng-if="(currentUser.role === userRoles.remRecepUser) || (currentUser.role === userRoles.admin)"><a ui-sref="grillIssue">Salida de Parillas</a></li>
+                            <li ng-if="(currentUser.role === userRoles.grillUser) || (currentUser.role === userRoles.admin)"><a ui-sref="grillAdd">Alta de Parillas</a></li>
+                            <li ng-if="(currentUser.role === userRoles.grillUser) || (currentUser.role === userRoles.admin) || (currentUser.role === userRoles.qualityUser)"><a ui-sref="grillManage">Inventario de Proceso</a></li>
+                            <li ng-if="(currentUser.role === userRoles.grillUser) || (currentUser.role === userRoles.admin)"><a ui-sref="grillCurrentInv">Inventario Actual</a></li>
+                            <li ng-if="(currentUser.role === userRoles.grillUser) || (currentUser.role === userRoles.admin)"><a ui-sref="grillIssue">Salida de Parillas</a></li>
                         </ul>
                     </li>
                     <li class="sub-menu" ng-if="(currentUser.role === userRoles.admin) || (currentUser.role === userRoles.humidityUser)">
@@ -109,7 +109,7 @@
                             <li><a ui-sref="humidityLastSamplings">Gestion Ultimas Muestras</a></li>
                         </ul>
                     </li>
-                    <li ng-if="(currentUser.role === userRoles.qualityUser) || (currentUser.role === userRoles.admin)"><a ui-sref="samplingGrillManage"><i class="md md-description"></i>Gestionar Muestreos de Calidad (Parrillas)</a></li>
+                    <li ng-if="(currentUser.role === userRoles.qualityUser) || (currentUser.role === userRoles.admin) || (currentUser.role === userRoles.grillUser)"><a ui-sref="samplingGrillManage"><i class="md md-description"></i>Gestionar Muestreos de Calidad (Parrillas)</a></li>
                     <li class="sub-menu" ng-if="(currentUser.role === userRoles.qualityUser) || (currentUser.role === userRoles.admin)">
                         <a href><i class="md md-system-update-tv"></i>Resultado de Proceso</a>
                         <ul>
