se agrego update a temporadas se quito agrego fecha a update en folios se redimensionaron graficas en home se corrigio buscador en humedad

--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,7 @@
                 <div class="profile-menu">
                     <a href data-toggle="dropdown">
                         <div class="profile-pic">
-                            <img src="img/profile-pics/8.jpg" alt="">
+                            <img src="img/profile-pics/nutProfile.jpg" alt="">
                         </div>
                         <div class="profile-info">{{currentUser.userName}}<i class="md md-arrow-drop-down"></i></div>
                     </a>
